[package]
name = "decomposer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
creek = { version = "0.2.3", features = ["decode-all"] }
derive-debug = "0.1.2"
directories-next = "2.0.0"
eframe = { version = "0.21.3", features = ["persistence"] }
env_logger = "0.10.0"
eyre = "0.6.8"
log = "0.4.17"
ron = "0.8.0"
rtrb = "0.2.3"
serde = { version = "1.0.163", features = ["derive"] }
symphonia = { version = "0.5.2", features = ["all-codecs"] }
